<resources>
    <string name="app_name">Reading List</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author</string>
    <string name="category_name">Category</string>
    <string name="pages_name">Pages</string>
    <string name="title_activity_book_add">BookAddActivity</string>
    <string name="progess_name">Progress</string>
    <string name="create_button_name">Save</string>
    <string name="cover_name">cover</string>
    <string name="delete_name">Delete</string>
    <string name="invalid_book_exception">You need to set a book name!</string>
    <string name="invalid_author_exception">You need to choose an author!</string>
    <string name="invalid_category_exception">You need to choose a category!</string>
    <string name="invalid_cover">You need to set the book name at least.</string>
    <string name="title_activity_category_choose">CategoryChooseActivity</string>
    <string name="choose_book">Book</string>
    <string name="title_activity_author_choose">AuthorChooseActivity</string>
    <string name="date">Date</string>
    <string name="action_log">log</string>
    <string name="title_activity_author_add">AuthorAddActivity</string>
    <string name="title_activity_cover_search">CoverSearchActivity</string>
    <string name="github">App developed by Rafael Gonçalves. Source code: https://github.com/rafagonc/Reading-List-Android</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_log_add">Add Log</string>
    <string name="title_activity_book_choose">Choose Book</string>
</resources>
