<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="goncalves.com.readinglist.Activities.LogAddActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <goncalves.com.readinglist.ViewAdapters.Concrete.CoverButton
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:id="@+id/coverImageView"
            android:hint="@string/cover_name"
            android:layout_centerHorizontal="true"
            android:shadowColor="@color/white"
            android:shadowRadius="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookEditText"
            android:hint="@string/choose_book"
            android:layout_below="@+id/coverImageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:focusableInTouchMode="false"
            />

        <goncalves.com.readinglist.ViewAdapters.Concrete.PagesEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pagesEditText"
            android:layout_marginTop="10dp"
            android:hint="@string/pages_name"
            android:layout_below="@+id/bookEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="number"/>

        <goncalves.com.readinglist.ViewAdapters.Concrete.DateEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateEditText"
            android:hint="@string/date"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/pagesEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="date"
            />

        <Button
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_button_name"
            android:id="@+id/saveButton"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/dateEditText"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null"
            android:onClick="onSaveClick"/>

        </RelativeLayout>


</ScrollView>
